Fix: spacing issue in toggle for dhasboard

--- a/packages/assets/css/src/scss/_components/_toggle/_elements/_toggle-content.scss
+++ b/packages/assets/css/src/scss/_components/_toggle/_elements/_toggle-content.scss
@@ -18,10 +18,6 @@
 				margin: 0 0 0 $toggle-spacing-lg;
 			}
 
-			@include element(description) {
-				margin-top: $spacing-sm;
-			}
-
 			@include element(label) {
 				font-weight: $font-weight-md;
 				font-size: $font-size-default;
